--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "深度遍历文件夹。deep scan some path.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC"
